src/test/deca/context/valid/ClassMathode15.deca
// Description:
//    simple cast class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {

}
class B extends A {

}

{

	A a;
	B b;

	b =(B)(a);

}