src/test/deca/context/invalid/class22.deca
class A{
    int a;
} 
{
    B a=new A();
    
}